fix z-index

--- a/src/systems/eu/implementations/vanilla/packages/eu-component-menu/eu-component-menu.scss
+++ b/src/systems/eu/implementations/vanilla/packages/eu-component-menu/eu-component-menu.scss
@@ -63,7 +63,7 @@
       right: 0;
       top: 0;
       width: 100%;
-      z-index: $ecl-z-index-modal;
+      z-index: $ecl-z-index-modal + 2;
     }
 
     .ecl-menu[aria-expanded='true'] .ecl-menu__overlay {
